# image_collector

./: CMakeLists.txt  README.md  package.xml
include/image_collector/: image_collector.hpp  image_collector_node.hpp  visibility_control.hpp
launch/: image_collector.launch.py
param/: defaults.param.yaml
src/: image_collector.cpp  image_collector_node.cpp
